# hopfer

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
res/: desc.html  hash.txt  hopfer.desktop
res/styles/: style.css  style.qss
src/: algorithm_compiler.py  color_picker.py  daemon.py  hopfer.py  image_processor.py  image_storage.py  main_window.py  preferences.py  processing_label.py  queue_io.py  queue_reader.py  res_loader.py  settings.py  shortcuts.py  sidebar.py  status.py  tabs.py  toolbox.py  viewer.py  viewer_controls.py  worker.py
src/algorithms/: bayer.py  bayerc.py  edodf.py  error_diffusion.py  error_diffusionc.py  grayscale.py  mezzo.py  mezzoc.py  sharpen.py  style_preview.py  threshold.py  thresholdc.py  variable_ed.py  variable_edc.py  ved_data.py
src/controls/: color_controls.py  color_manager.py  custom_range.py  dpi_controls.py  focus_widget.py  grayscale_combo.py  halftone_combo.py  resize_dialog.py  seed_spinbox.py  slider_control.py  titlebar.py  toggle.py
src/helpers/: debounce.py  decorators.py  image_conversion.py  kernels.py  load_stylesheet.py  no_outline.py
src/hopfer/: __main__.py  main.py
src/hopfer/bridge/: bridge.py  image_provider.py
src/hopfer/core/: config_object.py  daemon.py  image_processor.py  image_storage.py  queue_io.py
src/hopfer/core/algorithms/: bayer.py  bayerc.py  edodf.py  edodfc.py  error_diffusion.py  error_diffusionc.py  grayscale.py  mezzo.py  mezzoc.py  style_preview.py  threshold.py  thresholdc.py  variable_ed.py  variable_edc.py
src/hopfer/core/compiler/: algorithm_compiler.py
src/hopfer/helpers/: config.py  hex_rgb.py  image_conversion.py  image_utils.pyx  kernels.py  logfile.py  no_outline.py  parse.py  paths.py
src/hopfer/ui/: main.qml
src/hopfer/ui/Components/: AboutTab.qml  AccentSelector.qml  BackgroundLogo.qml  BayerSlider.qml  ColorControl.qml  ColorPicker.qml  DialogTitlebar.qml  Drop.qml  HalftonePanel.qml  ImagePanel.qml  LabeledRange.qml  LabeledSlider.qml  LabeledSliderNR.qml  LabeledSwitch.qml  MathSpinBox.qml  MemoryButtons.qml  OpenDialog.qml  OutputPanel.qml  PreferencesDialog.qml  PreferencesTab.qml  ResizeDialog.qml  SaveDialog.qml  ScaleButtons.qml  ScaleCombo.qml  ScaleContainer.qml  ShortcutRow.qml  ShortcutTab.qml  Shortcuts.qml  SnackBar.qml  SquareButton.qml  ThemeManager.qml  Titlebar.qml  TitlebarButton.qml  Toolbar.qml  Viewer.qml  qmldir
src/hopfer/ui/Icons/: Close.qml  qmldir  (+18 more)
(+44 files in other folders)
