[build-system]
requires = ["setuptools>=61.0", "wheel", "numba", "numpy", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "hopfer"
dynamic = ["version"]
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "PySide6",
    "numba",
    "numpy",
    "opencv-python-headless",
    "setproctitle",
    "platformdirs",
    "requests"
]

[project.urls]
Homepage = "https://github.com/crunchpaste/hopfer"
Issues = "https://github.com/crunchpaste/hopfer/issues"
Repository = "https://github.com/crunchpaste/hopfer.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hopfer" = [
    "ui/**/*.qml",
    "ui/**/qmldir",
    "ui/Fonts/*.ttf"
]
[tool.setuptools.dynamic]
version = {attr = "hopfer.VERSION"}

[tool.ruff]
lint.select = ["F", "E", "W", "I", "B", "SIM", "RUF"]
lint.ignore = ["E501", "SIM108", "RUF003"]
line-length = 80
[tool.ruff.format]
line-ending = "lf"

[project.scripts]
hopfer-qml = "hopfer.main:main"
